feed-channel: Clear cancellable pointer after cancelling

Otherwise the pointer will be left pointing to the previous cancellable
location, and crash if we try grss_feed_channel_fetch_all_finish() again,
because it will try to cancel all previous operations first.

https://bugzilla.gnome.org/show_bug.cgi?id=752827